kubernetes/order-service.yml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  labels:
    app: order-service
    service: order-service
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: order-service
    
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service-v1
  labels:
    app: order-service
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
      version: v1
  template:
    metadata:
      labels:
        app: order-service
        version: v1
    spec:
      serviceAccountName: order-service
      containers:
        - name: order-service
          image: hpreethip/order-service
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          securityContext:
            runAsUser: 1000
