kubernetes/pizza-service.yml
apiVersion: v1
kind: Service
metadata:
  name: pizza-service
  labels:
    app: pizza-service
    service: pizza-service
spec:
  ports:
    - port: 9090
      name: http
  selector:
    app: pizza-service
    
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: pizza-service-v1
  labels:
    app: pizza-service
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pizza-service
      version: v1
  template:
    metadata:
      labels:
        app: pizza-service
        version: v1
    spec:
      serviceAccountName: pizza-service
      containers:
        - name: pizza-service
          image: hpreethip/pizza-service
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9090
          securityContext:
            runAsUser: 1000
